2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c (totem_sidebar_toggle),
	(totem_sidebar_setup):
	* src/totem.c (totem_callback_connect): Make the sidebar arrow
	face right when closed, and face left when opened, showing the
	movement the sidebar would take, place the arrow to the right
	of the label (and vice-versa for RTL languages)

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem.c (update_mrl_label): Use "Movie Player", and
	not "Totem Movie Player" in the UI

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c (totem_playlist_set_reorderable),
	(totem_playlist_foreach_selected), (playlist_remove_files),
	(totem_playlist_move_files), (totem_playlist_file_changed),
	(totem_playlist_clear_with_compare): Clean up, and use only
	one codepath to remove files, whether selected files, or
	files matching a certain criteria.
	Should fix playlist weirdness when removing deleted files
	from the playlist (Closes: #550225)

2008-09-29  Christian Persch  <chpe@gnome.org>

        Bug 554224 – format not a string literal and no format arguments

        * browser-plugin/totem-plugin-viewer.c: Use %s to printf a string.

2008-09-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/README.browser-plugin: Fix typo spotted
	by Yan Morin <progysm@gmail.com>, the keyword is "disabled", not
	"disable"

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Fix dist

2008-09-21  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-menu.c (add_lang_action), (create_lang_actions),
	(totem_languages_update), (totem_subtitles_update): Add the
	subtitle and languages menus to the fullscreen popup as well
	(Closes: #164036)

2008-09-20  Philip Withnall  <philip@tecnocode.co.uk>

	* src/plugins/tracker/totem-tracker-widget.c (get_search_count):
	* src/totem-playlist.c (totem_playlist_error): Fix using unvetted
	strings in printf-style functions.
	* data/totem.schemas.in: